--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!doctype html>
 <html>
-  <head><title>mendaxdev</title></head>
+  <head>
+    <title>mendaxdev</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        background-color: #000;
+        color: #fff;
+        text-align: center;
+        margin-top: 150px;
+      }
+      h1 {
+        font-style: italic;
+      }
+    </style>
+  </head>
   <body>
     <h1>MENDAXDEV</h1>
   </body>
